examples/test/testpolicy5130.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5130
  namespace: namespace239
spec:
  podSelector:
    matchLabels:
      key6: value30
      key17: value23
      key43: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value25
      podSelector:
        matchLabels:
          key47: value49
          key36: value16
